[gd_scene load_steps=7 format=3 uid="uid://bw3wlgsaj62d"]

[ext_resource type="PackedScene" uid="uid://c1f2nrbjrbxxl" path="res://scenes/grid.tscn" id="1_fst11"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_w3pd8"]
[ext_resource type="Texture2D" uid="uid://bmkqpkuvr1psg" path="res://art/aim.png" id="3_x3wel"]
[ext_resource type="Texture2D" uid="uid://c74uutqfejcvw" path="res://art/aim_fired.png" id="4_ewd8m"]
[ext_resource type="Texture2D" uid="uid://33dbgkp2vo1f" path="res://art/aim_disabled.png" id="5_s5xec"]
[ext_resource type="PackedScene" uid="uid://pvfroivf6oki" path="res://scenes/radar.tscn" id="6_fpabw"]

[node name="Game" type="Node2D"]
script = ExtResource("1_w3pd8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 647.0
color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="PlayerGrid" parent="." instance=ExtResource("1_fst11")]
position = Vector2(14, 64)

[node name="EnemyGrid" parent="." instance=ExtResource("1_fst11")]
position = Vector2(660, 64)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 52.0

[node name="PlayerLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Player 1"

[node name="RoundLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 1034.0
offset_top = 3.0
offset_right = 1151.0
offset_bottom = 26.0
text = "Round 1"
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 1034.0
offset_top = 26.0
offset_right = 1151.0
offset_bottom = 49.0
text = "Time"
horizontal_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.5
offset_top = -80.0
offset_right = 235.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="RichTextLabel" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "sfalsfdlkdflksafjlkdfjldsfsalfsdl"
fit_content = true

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2048.0
offset_top = -2048.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.05, 0.05)
pivot_offset = Vector2(1821, 2040)

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2
texture_normal = ExtResource("3_x3wel")
texture_pressed = ExtResource("4_ewd8m")
texture_disabled = ExtResource("5_s5xec")

[node name="Radar" parent="CanvasLayer" instance=ExtResource("6_fpabw")]
position = Vector2(568, 138)

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="pressed" from="CanvasLayer/PanelContainer2/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
